# LibCMaker_libpng

./: .appveyor.yml  .travis.yml  README.md  cmr_build_libpng.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_libpng.cmake  cmr_find_package_libpng.cmake  cmr_get_download_params_libpng.cmake
cmake/modules/: FindPNG.cmake
patch/libpng-1.6.37/: CMakeLists.txt
patch/libpng-1.6.37/scripts/: genout.cmake.in
samples/TestCompileWithlibpng/: CMakeLists.txt  README.md
samples/TestCompileWithlibpng/src/: example.c  example_test.c  example_test.h
samples/TestCompileWithlibpng/test/: CMakeLists.txt
samples/ci_sample/src/: example_test_to_gtest.cpp
samples/ci_sample/test/: CMakeLists.txt
